# BigQL

./: Makefile  README.md  pyproject.toml
.github/workflows/: integration_test.yml  linter.yml  publish.yml  unit_test.yml  unittest.yml
bigql/: client.py
bigql/insert/: composer.py  parser.py  validator.py  writer.py
bigql/select/: composer.py  executor.py  scanner.py  validator.py
bigtableql/: __init__.py  client.py  composer.py  parser.py  select_parser.py  writer.py
bigtableql/insert/: __init__.py  composer.py  writer.py
bigtableql/select/: __init__.py  composer.py  parser.py  scanner.py
e2e_tests/: test_read_write.py
tests/: conftest.py  sql.yaml  test_bigtableql.py  test_client.py  test_composer.py  test_parser.py  test_scanner.py  test_select_parser.py
tests/insert/: sql.yaml  test_insert_composer.py  test_insert_parser.py  test_insert_validator.py
tests/select/: sql.yaml  test_composer.py  test_parser.py  test_scanner.py  test_select_query.py  test_validator.py
