[tool.poetry]
name = "BigtableQL"
version = "0.1.0"
description = "Query Layer for Google Cloud Bigtable"
authors = ["jychen7 <jychen7@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqloxide = "0.1.13"
google-cloud-bigtable = "2.4.0"
pyarrow = "6.0.1"
datafusion = "0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
